--- a/page-register-freelancer.html
+++ b/page-register-freelancer.html
@@ -694,6 +694,16 @@
                 <label class="form-label fw500 dark-color">Mot de passe</label>
                 <input type="text" class="form-control" placeholder="*******">
               </div>
+              <div class="mb25" style="margin-top: 20px;">
+                <label class="form-label fw500 dark-color">Catégorie</label>
+                <input type="email" class="form-control" list="civilites3" placeholder="Infographie">
+                  <datalist id="civilites3">
+                    <option value="Developpeur-web"></option>
+                    <option value="Audio-visuel"></option>
+                    <option value="Infographie"></option>
+                    <option value="Social Média"></option>
+                  </datalist>
+              </div>
               <div class="d-grid mb20">
                 <button class="ud-btn btn-thm default-box-shadow2" type="button"><a href="page-dashboard-freelancer.html" style="color: white;">Créer un compte</a> <i class="fal fa-arrow-right-long"></i></button>
               </div>
