--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
         <div class="row">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="00ms">
             <div class="main-title">
-              <h2 class="title">Notre Blog</h2>
+              <h2 class="title">Apprenez de nous</h2>
             </div>
           </div>
         </div>
