--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
          <div class="texte">
           <h1 class="animate-up-1 mb25 text-white">Votre besoin, Notre affaire</h1>
           <p class="text-white animate-up-2" style="font-size:1.5rem">Trouvez le talent parfait parmi nos professionnels pour répondre à <br class="d-none d-lg-block"> votre demande</p>
-          <div class="advance-search-tab bgc-white bgct-sm p10 p0-md bdrs4 banner-btn position-relative zi9">
+          <!-- <div class="advance-search-tab bgc-white bgct-sm p10 p0-md bdrs4 banner-btn position-relative zi9">
             <div class="row">
               <div class="col-md-5 col-lg-6 col-xl-6">
                 <div class="advance-search-field mb10-sm bdrr1 bdrn-sm">
@@ -827,8 +827,8 @@
                     </div>
                   </form>
                 </div>
-              </div>
-              <div class="col-md-4 col-lg-4 col-xl-4 d-none d-md-block">
+              </div> -->
+              <!-- <div class="col-md-4 col-lg-4 col-xl-4 d-none d-md-block">
                 <div class="bselect-style1">
                   <select class="selectpicker" data-width="100%">
                     <option>Catégories</option>
@@ -838,15 +838,15 @@
                     <option data-tokens="Video&Animation">Audio Visuel</option>
                   </select>
                 </div>
-              </div>
-              <div class="col-md-3 col-lg-2 col-xl-2 ps-md-0">
+              </div> -->
+              <!-- <div class="col-md-3 col-lg-2 col-xl-2 ps-md-0">
                 <div class="text-center text-xl-end">
                   <button class="ud-btn btn-thm w-100 px-4" type="button">Recherche</button>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="d-none d-md-flex mt30 banner-text">
+              </div> -->
+            <!-- </div>
+          </div> -->
+          <!-- <div class="d-none d-md-flex mt30 banner-text">
             <p class="hero-text fz15 me-2 text-white mb-0">Les plus populaires</p>
             <a class="text-white" href="page-service-v6.html" style="padding-right: 0.5rem;"> Developer,</a>
             <a class="text-white" href="page-service-v6.html"style="padding-right: 0.5rem;"> Web,</a>
@@ -854,10 +854,47 @@
             <a class="text-white" href="page-service-v6.html" style="padding-right: 0.5rem;"> Média,</a>
             <a class="text-white" href="page-service-v6.html" style="padding-right: 0.5rem;"> Infographie,</a>
             <a class="text-white" href="page-service-v6.html"> Logo</a>
+          </div> -->
+          <div style="display:flex; justify-content: space-evenly; gap: 50px; position: absolute; left: 250px; top: 400px;" class="posi">
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; " class="slideing">Devenir Freelancer</button>
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; " class="slideing">Trouver des talents</button>
           </div>
-         </div>
        </div>
    </section>
+
+      <!-- Our Partners --> 
+    <section style="margin-top: 50px; height: 200px;" class="our-partners pt0">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 wow fadeInUp">
+            <div class="main-title text-center">
+              <h6 style="font-size: 2rem;">Ils nous font confiance</h6>
+            </div>
+          </div>
+        </div>
+        <div class="row wow fadeInUp">
+          <div class="col-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/E241 (1).png" alt="1.png"></div>
+          </div>
+          <div class="col-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/E241B.png" alt="2.png"></div>
+          </div>
+          <div class="col-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/olabs.png" alt="3.png"></div>
+          </div>
+          <div class="colgit-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/kids.png" alt="4.png"></div>
+          </div>
+          <div class="col-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/JConsomme.png" alt="5.png"></div>
+          </div>
+          <div class="col-6 col-md-4 col-xl-2">
+            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/s241.png" alt="6.png"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr>
 
      <!-- Need something --> 
      <section class="our-features pb90">
@@ -910,6 +947,8 @@
         </div>
       </div>
     </section>
+
+    
 
     <!-- Trending Services -->
     <section class="pb90 pb30-md bgc-thm3">
@@ -1139,6 +1178,8 @@
       </div>
     </section>
 
+
+    
    
     <!-- Browse talent by category -->
     <section class="pb40-md pb90">
