nouvelle modif du header

--- a/index.html
+++ b/index.html
@@ -557,13 +557,13 @@
                 </li>
                 <li><a href="#"><span>Blog</span></a>
                 <li> <a class="list-item" href="page-contact.html">Contact</a></li>
-                <li><a class="login-info mr15-lg mr30" href="#"><span class="title">Se connecter</span></a>
+                <!-- <li><a class="login-info mr15-lg mr30" href="#"><span class="title">S'inscrire</span></a>
                   <ul>
                     <li><a href="page-login-freelancer.html">En tant que freelancer</a></li>
                     <li><a href="page-login-client.html">En tant que entreprise</a></li>
                   </ul>
-                </li>
-              </ul><a class="ud-btn btn-white add-joining" href="choix_Aron.html">S'inscrire</a>
+                </li> -->
+              </ul><a style= "margin-left: 40px" class="ud-btn btn-white add-joining" href="choix_Aron.html">Se connecter</a>
             </div>
           </div>
         </div>
@@ -777,8 +777,8 @@
       <div class="conteneur" > 
          <div class="divp"></div>
          <div class="texte">
-          <h1 class="animate-up-1 mb25 text-white">Votre besoin, Notre affaire</h1>
-          <p class="text-white animate-up-2" style="font-size:1.5rem">Trouvez le talent parfait parmi nos professionnels pour répondre à <br class="d-none d-lg-block"> votre demande</p>
+          <h1 style="position: relative; left: 200px; top: 30px; text-align: center;" class="animate-up-1 mb25 text-white">Bienvenue sur la plateforme où les <span style="color: #fdc110">Freelancers</span> et les <span style="color: #fdc110">Clients</span> s'expriment!</h1>
+          <!-- <p class="text-white animate-up-2" style="font-size:1.5rem">Trouvez le talent parfait parmi nos professionnels pour répondre à <br class="d-none d-lg-block"> votre demande</p> -->
           <!-- <div class="advance-search-tab bgc-white bgct-sm p10 p0-md bdrs4 banner-btn position-relative zi9">
             <div class="row">
               <div class="col-md-5 col-lg-6 col-xl-6">
@@ -855,9 +855,10 @@
             <a class="text-white" href="page-service-v6.html" style="padding-right: 0.5rem;"> Infographie,</a>
             <a class="text-white" href="page-service-v6.html"> Logo</a>
           </div> -->
-          <div style="display:flex; justify-content: space-evenly; gap: 50px; position: absolute; left: 250px; top: 400px;" class="posi">
-            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; " class="slideing">Devenir Freelancer</button>
-            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; " class="slideing">Trouver des talents</button>
+          <div style="display:flex; justify-content: space-evenly; gap: 50px; position: absolute; left: 200px; top: 300px;" class="posi">
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing">Devenir Freelancer</button>
+            <p style="color: white; font-weight: bold; position: relative; top: 20px">OU</p>
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing">Trouver des talents</button>
           </div>
        </div>
    </section>
