--- a/index.html
+++ b/index.html
@@ -856,9 +856,9 @@
             <a class="text-white" href="page-service-v6.html"> Logo</a>
           </div> -->
           <div style="display:flex; justify-content: space-evenly; gap: 50px; position: absolute; left: 200px; top: 300px;" class="posi">
-            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing">Devenir Freelancer</button>
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing" onclick="window.location.href='page-register-freelancer.html';">Devenir Freelancer</button>
             <p style="color: white; font-weight: bold; position: relative; top: 20px">OU</p>
-            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing">Trouver des talents</button>
+            <button style="color: white; height: 60px; width: 300px; border: none; border-radius: 30px; font-weight: bold;" class="slideing" onclick="window.location.href='page-register-client.html';">Trouver des talents</button>
           </div>
        </div>
    </section>
@@ -1178,9 +1178,6 @@
         </div>
       </div>
     </section>
-
-
-    
    
     <!-- Browse talent by category -->
     <section class="pb40-md pb90">
@@ -1366,35 +1363,18 @@
       <div class="cta-banner3 bgc-light-yellow mx-auto maxw1600 pt120 pt60-lg pb90 pb60-lg position-relative overflow-hidden">
         <div class="container">
           <div class="row">
-            <div class="col-xl-5 wow fadeInRight" data-wow-delay="300ms">
-              <div class="mb30">
-                <div class="main-title">
-                  <h2 class="title">Pourquoi 5Colos?</h2>
-                </div>
-              </div>
-              <div class="why-chose-list">
-                <div class="list-one d-flex align-items-start mb30" style="padding-right: 35px;">
-                  <span class="list-icon flex-shrink-0 flaticon-badge"></span>
-                  <div class="list-content flex-grow-1 ml20">
-                    <h4 class="mb-1">Le meilleur pour votre budget</h4>
-                    <p class="text mb-0 fz15">Vous pouvez trouver des services de haute qualité à tous les prix. <br class="d-none d-lg-block">Il n'y a pas de taux horaire, juste une tarification basée sur le projet.</p>
-                  </div>
-                </div>
-                <div class="list-one d-flex align-items-start mb30"  style="margin-left: 20px; padding-right: 10px;">
-                  <span class="list-icon flex-shrink-0 flaticon-money"></span>
-                  <div class="list-content flex-grow-1 ml20">
-                    <h4 class="mb-1">Un travail de qualité réalisé rapidement</h4>
-                    <p class="text mb-0 fz15">Trouvez le bon professionnel pour commencer à travailler<br class="d-none d-lg-block"> sur votre projet en quelques minutes.</p>
-                  </div>
-                </div>
-                <div class="list-one d-flex align-items-start mb30" style="margin-left: 40px;">
-                  <span class="list-icon flex-shrink-0 flaticon-security"></span>
-                  <div class="list-content flex-grow-1 ml20">
-                    <h4 class="mb-1">Tous les paiements sont protégés</h4>
-                    <p class="text mb-0 fz15">Avant le début des travaux vous effectuez un paiement qui ne sera reversé au professionnel qu'une fois le travail validé.<br class="d-none d-lg-block">  Dans le cas contraire, vous pouvez récupérer votre paiement.</p>
-                  </div>
-                </div>
-              </div>
+              <div class="col-xl-5 offset-xl-1">
+            <div class="position-relative wow fadeInLeft" data-wow-delay="300ms">
+              <h1 class="text-white mb35">Rejoignez nous maintenant et <span style="color: #61d37d;"> rentabilisez</span><br class="d-none d-lg-block"> vos <span style="color: #61d37d;"> compétences!</span> </h1>
+              <p class="text text-white mb35">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs et développer vos compétences grâce au pouvoir du numérique.</p>
+              <div class="list-style2 light-style">
+                <ul class="mb30">
+                  <li><i class="far fa-check"></i>Propulsez votre carrière vers la félicité</li>
+                  <!-- <li><i class="far fa-check"></i>Le meilleur pour votre budget</li> -->
+                  <li><i class="far fa-check"></i>Garantissez la sécurité de vos données</li>
+                  <li><i class="far fa-check"></i>Découvrez un nouvel espace de travail</li>
+                </ul>
+              </div><a href="#" class="ud-btn btn-thm">Voir plus<i class="fal fa-arrow-right-long"></i></a>
             </div>
           </div>
         </div>
@@ -1565,13 +1545,14 @@
           </div>
           <div class="col-xl-5 offset-xl-1">
             <div class="position-relative wow fadeInLeft" data-wow-delay="300ms">
-              <h2 class="text-white mb35">Le meilleur endroit <br class="d-none d-lg-block"> pour les entreprises et les particuliers</h2>
-              <p class="text text-white mb35">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs commerciaux grâce au pouvoir du numérique.</p>
+              <h1 class="text-white mb35">Inscrivez-vous dès maintenant pour trouver des<span> <span style="color: #61d37d;">freelancers qualifiés</span> <br> et développer votre <br class="d-none d-lg-block"><span style="color: #61d37d;">entreprise!</span> </span></h1>
+              <!-- <p class="text text-white mb35">Votre satisfaction est notre priorité, et nous vous aidons à atteindre vos objectifs à temps grâce au pouvoir numérique de  5Colos.</p> -->
               <div class="list-style2 light-style">
                 <ul class="mb30">
-                  <li><i class="far fa-check"></i>Le meilleur pour votre budget</li>
-                  <li><i class="far fa-check"></i>Tous les paiements sont protégés</li>
-                  <li><i class="far fa-check"></i>Un travail de qualité réalisé rapidement</li>
+                  <li><i class="far fa-check"></i>Garantis de la qualité du produit</li>
+                  <!-- <li><i class="far fa-check"></i>Le meilleur pour votre budget</li> -->
+                  <li><i class="far fa-check"></i>Garantis de la sécurité de vos données</li>
+                  <li><i class="far fa-check"></i>Découverte d'autres services satisfaisant</li>
                 </ul>
               </div><a href="#" class="ud-btn btn-thm">Voir plus<i class="fal fa-arrow-right-long"></i></a>
             </div>
