--- a/index.html
+++ b/index.html
@@ -1365,8 +1365,8 @@
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
             <div class="position-relative wow fadeInLeft" data-wow-delay="300ms">
-              <h1 class="text-white mb35">Rejoignez nous maintenant et <span style="color: #61d37d;"> rentabilisez</span><br class="d-none d-lg-block"> vos <span style="color: #61d37d;"> compétences!</span> </h1>
-              <p class="text text-white mb35">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs et développer vos compétences grâce au pouvoir du numérique.</p>
+              <h1 class="text-white mb35" style="color:black;">Rejoignez nous maintenant et <span style="color: #61d37d;"> rentabilisez</span><br class="d-none d-lg-block"> vos <span style="color: #61d37d;"> compétences!</span> </h1>
+              <p class="text text-white mb35" style="color:black;">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs et développer vos compétences grâce au pouvoir du numérique.</p>
               <div class="list-style2 light-style">
                 <ul class="mb30">
                   <li><i class="far fa-check"></i>Propulsez votre carrière vers la félicité</li>
