--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@
     </section>
 
     <!-- Our Partners --> 
-    <section class="our-partners pt0">
+    <!-- <section class="our-partners pt0">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 wow fadeInUp">
@@ -1666,7 +1666,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Our CTA --> 
     <section class="our-cta bgc-thm4 pt90 pb90 pt60-md pb60-md mt100 mt0-lg">
