--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
       <div class="conteneur" > 
          <div class="divp"></div>
          <div class="texte">
-          <h1 style="position: relative; left: 200px; top: 30px; text-align: center;" class="animate-up-1 mb25 text-white">Bienvenue sur la plateforme où les <span style="color: #fdc110">Freelancers</span> et les <span style="color: #fdc110">Clients</span> s'expriment!</h1>
+          <h1 style="position: relative; left: 200px; top: 30px; text-align: center;" class="animate-up-1 mb25 text-white-50">Bienvenue sur la plateforme où les <span style="color: #fdc110">Freelancers</span> et les <span style="color: #fdc110">Clients</span> s'expriment!</h1>
           <!-- <p class="text-white animate-up-2" style="font-size:1.5rem">Trouvez le talent parfait parmi nos professionnels pour répondre à <br class="d-none d-lg-block"> votre demande</p> -->
           <!-- <div class="advance-search-tab bgc-white bgct-sm p10 p0-md bdrs4 banner-btn position-relative zi9">
             <div class="row">
@@ -903,7 +903,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="main-title text-center">
-              <p style="font-size: 1.5rem;">Pour les entreprises</p>
+         <!---<p style="font-size: 1.5rem;">Pour les entreprises</p> -->
               <h2>5Colos comment ça marche?</h2>
             </div>
           </div>
@@ -1365,14 +1365,14 @@
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
             <div class="position-relative wow fadeInLeft" data-wow-delay="300ms">
-              <h1 class="text-white mb35" style="color:black;">Rejoignez nous maintenant et <span style="color: #61d37d;"> rentabilisez</span><br class="d-none d-lg-block"> vos <span style="color: #61d37d;"> compétences!</span> </h1>
-              <p class="text text-white mb35" style="color:black;">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs et développer vos compétences grâce au pouvoir du numérique.</p>
-              <div class="list-style2 light-style">
-                <ul class="mb30">
-                  <li><i class="far fa-check"></i>Propulsez votre carrière vers la félicité</li>
+              <h1 class="text-white mb35" style="color:black">Rejoignez nous maintenant et <span style="color: #61d37d;"> rentabilisez</span><br class="d-none d-lg-block"> vos <span style="color: #61d37d;"> compétences!</span> </h1>
+              <p class="text text-white mb35" style="color:black">Votre réussite est une priorité, et nous voulons vous aider à atteindre vos objectifs et développer vos compétences grâce au pouvoir du numérique.</p>
+              <div class="list-style2 light-style" style="color:black">
+                <ul class="mb30" style="color:black">
+                  <li style="color:black"><i class="far fa-check" style="color:black"></i>Propulsez votre carrière vers la félicité</li>
                   <!-- <li><i class="far fa-check"></i>Le meilleur pour votre budget</li> -->
-                  <li><i class="far fa-check"></i>Garantissez la sécurité de vos données</li>
-                  <li><i class="far fa-check"></i>Découvrez un nouvel espace de travail</li>
+                  <li style="color:black"><i class="far fa-check" style="color:black"></i>Garantissez la sécurité de vos données</li>
+                  <li style="color:black"><i class="far fa-check" style="color:black"></i>Découvrez un nouvel espace de travail</li>
                 </ul>
               </div><a href="#" class="ud-btn btn-thm">Voir plus<i class="fal fa-arrow-right-long"></i></a>
             </div>
@@ -1545,7 +1545,7 @@
           </div>
           <div class="col-xl-5 offset-xl-1">
             <div class="position-relative wow fadeInLeft" data-wow-delay="300ms">
-              <h1 class="text-white mb35">Inscrivez-vous dès maintenant pour trouver des<span> <span style="color: #61d37d;">freelancers qualifiés</span> <br> et développer votre <br class="d-none d-lg-block"><span style="color: #61d37d;">entreprise!</span> </span></h1>
+              <h1 class="text-white-50 mb35">Inscrivez-vous dès maintenant pour trouver des<span> <span style="color: #61d37d;">freelancers qualifiés</span> <br> et développer votre <br class="d-none d-lg-block"><span style="color: #61d37d;">entreprise!</span> </span></h1>
               <!-- <p class="text text-white mb35">Votre satisfaction est notre priorité, et nous vous aidons à atteindre vos objectifs à temps grâce au pouvoir numérique de  5Colos.</p> -->
               <div class="list-style2 light-style">
                 <ul class="mb30">
@@ -1616,40 +1616,7 @@
       </div>
     </section>
 
-    <!-- Our Partners --> 
-    <section class="our-partners pt0">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 wow fadeInUp">
-            <div class="main-title text-center">
-              <h6 style="font-size: 2rem;">Ils nous font confiance</h6>
-            </div>
-          </div>
-        </div>
-        <div class="row wow fadeInUp">
-          <div class="col-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/E241 (1).png" alt="1.png"></div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/E241B.png" alt="2.png"></div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/olabs.png" alt="3.png"></div>
-          </div>
-          <div class="colgit-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/kids.png" alt="4.png"></div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/JConsomme.png" alt="5.png"></div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2">
-            <div class="partner_item text-center mb30-lg"><img class="wa m-auto" src="images/partners/s241.png" alt="6.png"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Our CTA --> 
+    <!-- Our CTA 
     <section class="our-cta bgc-thm4 pt90 pb90 pt60-md pb60-md mt100 mt0-lg">
       <div class="container">
         <div class="row justify-content-between">
@@ -1666,7 +1633,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Our Footer --> 
     <section class="footer-style1 pt25 pb-0">
@@ -1674,15 +1641,15 @@
         <div class="row bb-white-light pb10 mb60">
           <div class="col-md-7">
             <div class="d-block text-center text-md-start justify-content-center justify-content-md-start d-md-flex align-items-center mb-3 mb-md-0">
-              <a class="fz17 fw500 text-white mr15-md mr30" href="#">Termes et conditions</a>
-              <a class="fz17 fw500 text-white mr15-md mr30" href="#">Politique de confidentialité</a>
-              <a class="fz17 fw500 text-white" href="#">Site Map</a>
+              <a class="fz17 fw500 text-white-50 mr15-md mr30" href="#">Termes et conditions</a>
+              <a class="fz17 fw500 text-white-50 mr15-md mr30" href="#">Politique de confidentialité</a>
+              <a class="fz17 fw500 text-white-50" href="#">Site Map</a>
             </div>
           </div>
           <div class="col-md-5">
             <div class="social-widget text-center text-md-end">
               <div class="social-style1">
-                <a class="text-white me-2 fw500 fz17" href="#">Nous suivre</a>
+                <a class="text-white-50 me-2 fw500 fz17" href="#">Nous suivre</a>
                 <a href="#"><i class="fab fa-facebook-f list-inline-item"></i></a>
                 <a href="#"><i class="fab fa-twitter list-inline-item"></i></a>
                 <a href="#"><i class="fab fa-instagram list-inline-item"></i></a>
@@ -1695,7 +1662,7 @@
           <div class="col-sm-6 col-lg-3">
             <div class="col-sm-6 col-lg-3">
               <div class="link-style1 mb-4 mb-sm-5">
-                <h5 class="text-white mb15">Categories</h5>
+                <h5 class="text-white-50 mb15">Categories</h5>
                 <ul class="ps-0">
                   <li><a href="page-service-v6.html">Infographie</a></li>
                   <li><a href="page-service-v6.html">Développement web</a></li>
@@ -1707,7 +1674,7 @@
           </div>
           <div class="col-sm-6 col-lg-3">
             <div class="link-style1 mb-4 mb-sm-5">
-              <h5 class="text-white mb15">Support</h5>
+              <h5 class="text-white-50 mb15">Support</h5>
               <ul class="ps-0">
                 <li><a href="#">Support et aide</a></li>
                 <li><a href="#">Confiance et sécurité</a></li>
@@ -1718,7 +1685,7 @@
             <div class="footer-widget">
               <div class="footer-widget mb-4 mb-sm-5">
                 <div class="mailchimp-widget">
-                  <h5 class="title text-white mb20">Souscrire</h5>
+                  <h5 class="title text-white-50 mb20">Souscrire</h5>
                   <div class="mailchimp-style1">
                     <input type="email" class="form-control" placeholder="Adresse email">
                     <button type="submit">Envoyer</button>
