hopefully it's good

--- a/page-freelancer-accueil.html
+++ b/page-freelancer-accueil.html
@@ -53,8 +53,8 @@
           <div class="col-auto pe-0">
             <div class="d-flex align-items-center">
               <a class="header-logo bdrr1 pr30 pr5-xl" href="page-freelancer-accueil.html"><h3 style="color: green;">5Colos</h3></a>
-              <a href="#" class="btn-mega fw500" style="padding-left: 20px;">Accueil</a>
-              <a href="#" class="btn-mega fw500" style="padding-left: 20px;">Mes missions</a>
+              <a href="page-freelancer-accueil.html" class="btn-mega fw500" style="padding-left: 20px;">Accueil</a>
+              <a href="page-dashboard-proposal-freelancer.html" class="btn-mega fw500" style="padding-left: 20px;">Mes missions</a>
               <a href="#" class="btn-mega fw500" style="padding-left: 20px;">5Colos learn</a>
               <div class="home1_style">
                 <div id="mega-menu">
