--- a/index3.html
+++ b/index3.html
@@ -2115,7 +2115,7 @@
     </section> -->
 
 
-   Our Partners --> 
+  <!-- Our Partners --> 
 
     <!-- <section class="our-partners pt0">
       <div class="container">
@@ -2147,7 +2147,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section> 
 
 
    CTA Banner 
@@ -2276,232 +2276,6 @@
     </section> -->
 
 
-    <section class="pb90 pb30-md bgc-thm3">
-      <div class="container">
-        <div class="row align-items-center wow fadeInUp">
-          <div class="col-lg-9">
-            <div class="main-title">
-              <h2 class="title">Services populaires</h2>
-              <p class="paragraph">Passer votre commande de service par catégorie</p>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="text-start text-lg-end mb-4 mb-lg-2">
-              <a class="ud-btn2" href="page-service-all.html">Toutes les Catégories<i class="fal fa-arrow-right-long"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="slider-outer-dib vam_nav_style dots_none slider-4-grid2 owl-carousel owl-theme wow fadeInUp" data-wow-delay="300ms">
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-1.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Infographie</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-2.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                     <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Médias Sociaux</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-3.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                    <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Développement Web</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-4.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                    <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Audio visuel</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-5.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                     <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Médias Sociaux</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-6.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                     <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Infographie</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="listing-style1">
-                  <div class="list-thumb">
-                    <img class="w-100" src="images/listings/g-7.jpg" alt="">
-                    <a href="#" class="listing-fav fz12"><span class="far fa-heart"></span></a>
-                  </div>
-                  <div class="list-content">
-                     <!--<p class="list-text body-color fz14 mb-1">Infographie</p>-->
-                    <h5 class="list-title"><a href="page-service-v6.html">Audio Visuel</a></h5>
-                <!--<div class="review-meta d-flex align-items-center">
-                      <i class="fas fa-star fz10 review-color me-2"></i>
-                      <p class="mb-0 body-color fz14"><span class="dark-color me-2">4.82</span>94 reviews</p>
-                    </div>
-                    <hr class="my-2">
-                    <div class="list-meta d-flex justify-content-between align-items-center mt15">
-                      <a class="d-flex" href="#">
-                        <span class="position-relative mr10">
-                          <img class="rounded-circle wa" src="images/team/fl-s-1.png" alt="Freelancer Photo">
-                          <span class="online-badges"></span>
-                        </span>
-                        <span class="fz14">Wanda Runo</span>
-                      </a>
-                      <div class="budget">
-                        <p class="mb-0 body-color">Starting at<span class="fz17 fw500 dark-color ms-1">$983</span></p>
-                      </div>
-                    </div> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- Our CTA --> 
     <!-- <section class="our-cta cta-home3-last pt90 pb90 pt60-md pb60-md mt100 mt0-lg">
@@ -2522,7 +2296,7 @@
         </div>
       </div>
     </section> -->
-<!-- Our Footer --> 
+<!-- Our Footer  
 <section class="footer-style1 pt25 pb-0">
   <div class="container">
     <div class="row bb-white-light pb10 mb60">
@@ -2849,15 +2623,15 @@
 <div class="row bb-white-light pb10 mb60">
   <div class="col-md-7">
     <div class="d-block text-center text-md-start justify-content-center justify-content-md-start d-md-flex align-items-center mb-3 mb-md-0">
-      <a class="fz17 fw500 text-white mr15-md mr30" href="#">Termes et conditions</a>
-      <a class="fz17 fw500 text-white mr15-md mr30" href="#">Politique de confidentialité</a>
-      <a class="fz17 fw500 text-white" href="#">Site Map</a>
+      <a class="fz17 fw500 text-white-50 mr15-md mr30" href="#">Termes et conditions</a>
+      <a class="fz17 fw500 text-white-50 mr15-md mr30" href="#">Politique de confidentialité</a>
+      <a class="fz17 fw500 text-white-50" href="#">Site Map</a>
     </div>
   </div>
   <div class="col-md-5">
     <div class="social-widget text-center text-md-end">
       <div class="social-style1">
-        <a class="text-white me-2 fw500 fz17" href="#">Nous suivre</a>
+        <a class="text-white-50 me-2 fw500 fz17" href="#">Nous suivre</a>
         <a href="#"><i class="fab fa-facebook-f list-inline-item"></i></a>
         <a href="#"><i class="fab fa-twitter list-inline-item"></i></a>
         <a href="#"><i class="fab fa-instagram list-inline-item"></i></a>
@@ -2870,7 +2644,7 @@
   <div class="col-sm-6 col-lg-3">
     <div class="col-sm-6 col-lg-3">
       <div class="link-style1 mb-4 mb-sm-5">
-        <h5 class="text-white mb15">Categories</h5>
+        <h5 class="text-white-50 mb15">Categories</h5>
         <ul class="ps-0">
           <li><a href="page-service-v6.html">Infographie</a></li>
           <li><a href="page-service-v6.html">Développement web</a></li>
@@ -2882,7 +2656,7 @@
   </div>
   <div class="col-sm-6 col-lg-3">
     <div class="link-style1 mb-4 mb-sm-5">
-      <h5 class="text-white mb15">Support</h5>
+      <h5 class="text-white-50 mb15">Support</h5>
       <ul class="ps-0">
         <li><a href="#">Support et aide</a></li>
         <li><a href="#">Confiance et sécurité</a></li>
@@ -2893,7 +2667,7 @@
     <div class="footer-widget">
       <div class="footer-widget mb-4 mb-sm-5">
         <div class="mailchimp-widget">
-          <h5 class="title text-white mb20">Souscrire</h5>
+          <h5 class="title text-white-50 mb20">Souscrire</h5>
           <div class="mailchimp-style1">
             <input type="email" class="form-control" placeholder="Adresse email">
             <button type="submit">Envoyer</button>
