--- a/page-dashboard-client.html
+++ b/page-dashboard-client.html
@@ -28,8 +28,6 @@
 <!-- Title -->
 <title>5 Colos</title>
 <!-- Favicon -->
-<link href="images/favicon.ico" sizes="128x128" rel="shortcut icon" type="image/x-icon" />
-<link href="images/favicon.ico" sizes="128x128" rel="shortcut icon" />
 <!-- Apple Touch Icon -->
 <link href="images/apple-touch-icon-60x60.png" sizes="60x60" rel="apple-touch-icon">
 <link href="images/apple-touch-icon-72x72.png" sizes="72x72" rel="apple-touch-icon">
@@ -56,7 +54,7 @@
           <div class="col-6 col-lg-auto">
             <div class="text-center text-lg-start d-flex align-items-center">
               <div class="dashboard_header_logo position-relative me-2 me-xl-5">
-                <a class="header-logo logo2" href="index.html"><h3 style="color:green;"><strong>5Colos</strong></h3></a>
+                <a class="header-logo logo2" href="index3.html"><h3 style="color:green;"><strong>5Colos</strong></h3></a>
               </div>
               <div class="fz20 ml90">
                 <a href="#" class="dashboard_sidebar_toggle_icon vam"><img src="images/dashboard-navicon.svg" alt=""></a>
