--- a/page-login-freelancer.html
+++ b/page-login-freelancer.html
@@ -695,7 +695,7 @@
                 <a class="fz14 ff-heading" href="#">Vous avez perdu votre mot de passe ?</a>
               </div>
               <div class="d-grid mb20">
-                <button class="ud-btn btn-thm" type="button"><a href="page-dashboard-freelancer.html" style="color: white;">Soumettre</a><i class="fal fa-arrow-right-long"></i></button>
+                <button class="ud-btn btn-thm" type="button"><a href="page-freelancer-accueil.html" style="color: white;">Soumettre</a><i class="fal fa-arrow-right-long"></i></button>
               </div>
               <div class="hr_content mb20"><hr><span class="hr_top_text">Ou</span></div>
               <div class="d-md-flex justify-content-between">
