--- a/page-register-client.html
+++ b/page-register-client.html
@@ -696,7 +696,7 @@
                 <input type="text" class="form-control" placeholder="*******">
               </div>
               <div class="d-grid mb20">
-                <button class="ud-btn btn-thm default-box-shadow2" type="button"><a href="page-dashboard-client.html" style="color: white;">Créer un compte </a><i class="fal fa-arrow-right-long"></i></button>
+                <button class="ud-btn btn-thm default-box-shadow2" type="button"><a href="index3.html" style="color: white;">Créer un compte </a><i class="fal fa-arrow-right-long"></i></button>
               </div>
               <div class="hr_content mb20"><hr><span class="hr_top_text">Ou</span></div>
               <div class="d-md-flex justify-content-between">
