--- a/choix_Aron.html
+++ b/choix_Aron.html
@@ -19,7 +19,7 @@
   </header>
 
 <section class="container">
-  <h1>Nous joindre comme Client ou Freelancer</h1>
+  <h1>Se connecter comme Client ou Freelancer</h1>
   <div class="choice">
     <aside class="pre">
       <input name="dx" type="radio" id="UN"> 
@@ -32,10 +32,10 @@
       <h4>Je suis un Freelancer</h4>
     </aside>
   <div class="text">
-    <p>Avez-vous déjà un compte?<span><a href="page-login-client.html">Se connecter</a></span></p>
+    <p>Vous n'avez pas encore de compte?<span><a href="page-register-client.html">S'inscrire</a></span></p>
   </div>
   </div>
-  <a href="page-register-freelancer.html"><button class="btn"><h4>S'inscrire</h4></button></a>
+  <a href="page-login-client.html"><button class="btn"><h4>se connecter</h4></button></a>
 </section>
   
 </body>                                                                                    
