--- a/page-register.html
+++ b/page-register.html
@@ -692,7 +692,8 @@
                 <input type="text" class="form-control">
             </div>
             <div class="categorie" style="margin-top: 30px;">
-                <label class="form-label fw500 dark-color">Catégories</label>
+                <label class="form-label fw50
+                0 dark-color">Catégories</label>
                 <input type="text" list="civilites3" class="form-control" > 
                 <datalist id="civilites3">
                     <option value="Entreprise">Entreprise</option>
@@ -705,11 +706,11 @@
                 <div class="pays" style="margin-top: 30px;">
                     <label class="form-label fw500 dark-color">Pays</label>
                     <input type="text" list="civilites" class="form-control">
-                    <datalist id="civilites">
+                    <select id="civilites" re>
                         <option value="Gabon">Gabon</option>
                         <option value="France">France</option>
                         <option value="Espagne">Espagne</option>
-                      </datalist>
+                      </select>
                 </div>
 
                 <div class="ville" style="margin-top: 30px;">
