--- a/page-login-freelancer.html
+++ b/page-login-freelancer.html
@@ -40,7 +40,7 @@
 
 </head>
 <body>
-<div class="wrapper ovh">
+<div class="wrapper ovh" >
   <div class="preloader"></div>
   
   <!-- Main Header Nav -->
@@ -53,7 +53,7 @@
             <div class="d-flex align-items-center justify-content-between" >
               <div class="logos br-white-light pr30 pr5-xl">
                 <a class="header-logo logo1" href="index.html"><h3 style="color:white;"><strong>5Colos</strong></h3></a>
-                <a class="header-logo logo2" href="index.html"><h3 style="color:green;"><strong>5Colos</strong></h3></a>
+                <!-- <a class="header-logo logo2" href="index.html"><h3 style="color:green;"><strong>5Colos</strong></h3></a> -->
               </div>
       <!--    <div class="home1_style">
                 <div id="mega-menu">
@@ -512,9 +512,9 @@
               </div> -->
             </div>
           </div>
-          <div class="col-auto px-0">
+          <!-- <div class="col-auto px-0">
             <div class="d-flex align-items-center">
-              <!-- Responsive Menu Structure-->
+              Responsive Menu Structure
               <ul id="respMenu" class="ace-responsive-menu" data-menu-style="horizontal">
                 <li class="visible_list"> <a class="list-item" href="index.html"><span class="title">Accueil</span></a>
                 </li>
@@ -564,7 +564,7 @@
                 </li>
               </ul><a class="ud-btn btn-white add-joining" href="choix_Aron.html">S'inscrire</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </nav>
@@ -661,21 +661,30 @@
 
   <div class="body_content">
     <!-- Our LogIn Area -->
-    <section class="our-login" style="background-color: #fdc110;
+    <section class="our-login" style="background: linear-gradient(to bottom, #fdc110, #ff9900, #ff6600, #ff3300);
     color: #ffffff;;">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 m-auto wow fadeInUp" data-wow-delay="300ms">
-            <div class="main-title text-center" style="color: #ffffff;">
+            <!-- <div class="main-title text-center" style="color: #ffffff;">
               <h2 class="title" style="color: #ffffff;">S'identifier</h2>
               <p class="paragraph" style="color: #ffffff;">Offrez à votre visiteur une expérience en ligne fluide avec un design UX solide.</p>
-            </div>
+            </div> -->
           </div>
         </div>
-        <div class="row wow fadeInRight" data-wow-delay="300ms">
+        <div class="row wow fadeInRight" data-wow-delay="300ms" >
           <div class="col-xl-6 mx-auto">
             <div class="log-reg-form search-modal form-style1 bgc-white p50 p30-sm default-box-shadow1 bdrs12">
+              <div class="col-lg-6 m-auto wow fadeInUp" data-wow-delay="300ms">
+                <div class="main-title text-center" style="color: #ffffff;">
+                  <h2 class="title" style="color: #000;">S'identifier</h2>
+                  <!-- <p class="paragraph" style="color: #000; width: 100%;">Offrez à votre visiteur une expérience en ligne fluide avec un design UX solide.</p> -->
+                </div>
+              </div>
               <div class="mb30">
+                <!-- <div class="col-lg-6 m-auto wow fadeInUp" data-wow-delay="300ms">
+                  
+                </div> -->
                 <h4>Nous sommes heureux de vous revoir!</h4>
                 <p class="text">Vous n’avez pas de compte? <a href="page-register-freelancer.html" class="text-thm">S'inscrire!</a></p>
               </div>
@@ -699,7 +708,7 @@
               </div>
               <div class="hr_content mb20"><hr><span class="hr_top_text">Ou</span></div>
               <div class="d-md-flex justify-content-between">
-                <button class="ud-btn btn-fb fz14 fw400 mb-2 mb-md-0" type="button"><i class="fab fa-facebook-f pr10"></i> Continue Facebook</button>
+                <button class="ud-btn btn-fb fz14 fw400 mb-2 mb-md-0" type="button"><i class="fab fa-facebook-f pr10"></i>Continue Facebook </button>
                 <button class="ud-btn btn-google fz14 fw400 mb-2 mb-md-0" type="button"><i class="fab fa-google"></i> Continue Google</button>
                 <button class="ud-btn btn-apple fz14 fw400" type="button"><i class="fab fa-apple"></i> Continue Apple</button>
               </div>
@@ -710,7 +719,7 @@
     </section>
 
     <!-- Our Footer --> 
-    <section class="footer-style1 pt25 pb-0">
+    <!-- <section class="footer-style1 pt25 pb-0">
       <div class="container">
         <div class="row bb-white-light pb10 mb60">
           <div class="col-md-7">
@@ -782,7 +791,7 @@
     </section>
     <a class="scrollToHome" href="#"><i class="fas fa-angle-up"></i></a>
   </div>
-</div>
+</div> -->
 <!-- Wrapper End --> 
 <script src="js/jquery-3.6.4.min.js"></script>
 <script src="js/jquery-migrate-3.0.0.min.js"></script>
