--- a/page-register-freelancer2.html
+++ b/page-register-freelancer2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="fr">
 
-<!-- Mirrored from creativelayers.net/themes/freeio-html/page-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Sep 2023 16:25:26 GMT -->
+<!-- Mirrored from creativelayers.net/themes/freeio-html/page-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Sep 2023 16:25:26 GMT -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -514,7 +514,7 @@
           </div>
           <!-- <div class="col-auto px-0">
             <div class="d-flex align-items-center">
-             Responsive Menu Structure
+               Responsive Menu Structure
               <ul id="respMenu" class="ace-responsive-menu" data-menu-style="horizontal">
                 <li class="visible_list"> <a class="list-item" href="index.html"><span class="title">Accueil</span></a>
                 </li>
@@ -565,8 +565,8 @@
               </ul><a class="ud-btn btn-white add-joining" href="choix_Aron.html">S'inscrire</a>
             </div>
           </div>
-        </div> -->
-      </div>
+        </div>
+      </div> -->
     </nav>
   </header>
   <!-- Search Modal -->
@@ -658,45 +658,89 @@
       </ul>
     </nav>
   </div>
-
   <div class="body_content">
-    <!-- Our LogIn Area -->
-    <section class="our-login" style="background:  linear-gradient(to bottom, #9effc0, #4fbf8a, #00865a);
-    color: #fff;;">
+    <!-- Our SignUp Area -->
+    <section class="our-register" style="background-color: #fdc110;
+    color: #ffffff;;">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 m-auto wow fadeInUp" data-wow-delay="300ms">
-            <div class="main-title text-center" style="color: #fff;">
-              <!-- <h2 class="title" style="color: #fff;">S'identifier</h2> -->
-              <!-- <p class="paragraph" style="color: #fff;">Connectez-vous maintenant sur 5colos et gagnez satisfaction avec la variété de nos services attrayants de toutes catégories.</p> -->
-            </div>
+        <div class="row" >
+          <div class="col-lg-6 m-auto wow fadeInUp" data-wow-delay="300ms" >
+            <!-- <div class="main-title text-center">
+              <h2 class="title" style="color: #ffffff;">Freelancer</h2>
+              <p class="paragraph" style="color: #ffffff;">Inscrivez-vous maintenant sur 5colos et Offrez à votre visiteur une expérience en ligne fluide avec un design UX solide. </p>
+            </div> -->
           </div>
         </div>
-        <div class="row wow fadeInRight" data-wow-delay="300ms">
+        <div class="row wow fadeInRight" data-wow-delay="300ms" style="width: 100%;">
           <div class="col-xl-6 mx-auto">
-            <div class="log-reg-form search-modal form-style1 bgc-white p50 p30-sm default-box-shadow1 bdrs12">
+            <div class="log-reg-form search-modal form-style1 bgc-white p50 p30-sm default-box-shadow1 bdrs12" >
               <div class="mb30">
-                <h2 class="title" style="text-align: center;">S'identifier</h2>
-                <h4>Nous sommes heureux de vous revoir!</h4>
-                <p class="text">Vous n’avez pas de compte? <a href="page-register-client.html" class="text-thm">S'inscrire!</a></p>
+                <h3 aligne="center" style="text-align: center;">S'inscrire en tant que Freelancer</h3>
+                <p class="text mt20">Vous avez déjà un compte? <a href="page-login-freelancer.html" class="text-thm">S'identifier!</a></p>
               </div>
-              <div class="mb20">
-                <label class="form-label fw600 dark-color">Adresse e-mail</label>
+              <div class="mb25" style="display: flex; gap: 20px;">
+                <div>
+                  <!-- <label class="form-label fw500 dark-color">Nom(s)</label> -->
+                  <!-- <input type="text" class="form-control" placeholder="NZE"> -->
+                </div>
+                <div>
+                  <!-- <label class="form-label fw500 dark-color">Prénom(s)</label> -->
+                  <!-- <input type="text" class="form-control" placeholder="Mathieu"> -->
+              </div>
+              </div>
+              <div class="mb25">
+                <!-- <label class="form-label fw500 dark-color">Prénom(s)</label>
+                <input type="text" class="form-control" placeholder="alitf"> -->
+              </div>
+              <!-- <div class="mb25">
+                <label class="form-label fw500 dark-color">Adresse e-mail</label>
                 <input type="email" class="form-control" placeholder="alitfn58@gmail.com">
-              </div>
+              </div> -->
               <div class="mb15">
-                <label class="form-label fw600 dark-color">Mot de passe</label>
+                <label class="form-label fw500 dark-color">Mot de passe</label>
                 <input type="text" class="form-control" placeholder="*******">
               </div>
-              <div class="checkbox-style1 d-block d-sm-flex align-items-center justify-content-between mb20">
-                <label class="custom_checkbox fz14 ff-heading">Souvenez-vous de moi</label>
-                  <input type="checkbox" checked="checked">
-                  <span class="checkmark"></span>
-                </label>
-                <a class="fz14 ff-heading" href="#">Vous avez perdu votre mot de passe ?</a>
+              <div class="mb25" style="margin-top: 20px;">
+                <label class="form-label fw500 dark-color">Catégorie</label>
+                <!-- <input type="email" class="form-control" list="civilites3" placeholder="Infographie"> -->
+                  <select class="form-control">
+                    <option>Default select</option>
+                    <option value="">Developpeur-web</option>
+                    <option value="">Audio-visuel</option>
+                    <option value="">Infographie</option>
+                    <option value="">Social Média</option>
+                  </select>
+                  <!-- <select id="catégorie" name="categorie" required>
+                    <option value="Developpeur-web"></option>
+                    <option value="Audio-visuel"></option>
+                    <option value="Infographie"></option>
+                    <option value="Social Média"></option>
+                  </select> -->
+              </div>
+              <div class="mb25" >
+                <div>
+                  <label class="form-label fw500 dark-color">Pays</label>
+                  <!-- <input type="text" class="form-control" placeholder="Gabon"> -->
+                  <select class="form-control">
+                    <option value="">Gabon</option>
+                    <option value="">France</option>
+                    <option value="">Sénégal</option>
+                    <option value="">Espagne</option>
+                  </select>
+                </div>
+                <div>
+                  <label class="form-label fw500 dark-color">Villes</label>
+                  <!-- <input type="text" class="form-control" placeholder="Libfreville"> -->
+                  <select class="form-control">
+                    <option value="">Libreville</option>
+                    <option value="">Paris</option>
+                    <option value="">Dakar</option>
+                    <option value="">Madrid</option>
+                  </select>
+              </div>
               </div>
               <div class="d-grid mb20">
-                <button class="ud-btn btn-thm" type="button"><a href="index3.html" style="color: white;">Soumettre</a><i class="fal fa-arrow-right-long"></i></button>
+                <button class="ud-btn btn-thm default-box-shadow2" type="button"><a href="page-freelancer-accueil.html" style="color: white;">Créer un compte</a> <i class="fal fa-arrow-right-long"></i></button>
               </div>
               <div class="hr_content mb20"><hr><span class="hr_top_text">Ou</span></div>
               <div class="d-md-flex justify-content-between">
@@ -710,77 +754,77 @@
       </div>
     </section>
 
-    <!-- Our Footer --> 
-    <!-- <section class="footer-style1 pt25 pb-0">
-      <div class="container">
-        <div class="row bb-white-light pb10 mb60">
-          <div class="col-md-7">
-            <div class="d-block text-center text-md-start justify-content-center justify-content-md-start d-md-flex align-items-center mb-3 mb-md-0">
-              <a class="fz17 fw500 text-white mr15-md mr30" href="#">Termes et conditions</a>
-              <a class="fz17 fw500 text-white mr15-md mr30" href="#">Politique de confidentialité</a>
-              <a class="fz17 fw500 text-white" href="#">Site Map</a>
-            </div>
+   <!-- Our Footer --> 
+   <!-- <section class="footer-style1 pt25 pb-0">
+    <div class="container">
+      <div class="row bb-white-light pb10 mb60">
+        <div class="col-md-7">
+          <div class="d-block text-center text-md-start justify-content-center justify-content-md-start d-md-flex align-items-center mb-3 mb-md-0">
+            <a class="fz17 fw500 text-white mr15-md mr30" href="#">Termes et conditions</a>
+            <a class="fz17 fw500 text-white mr15-md mr30" href="#">Politique de confidentialité</a>
+            <a class="fz17 fw500 text-white" href="#">Site Map</a>
           </div>
-          <div class="col-md-5">
-            <div class="social-widget text-center text-md-end">
-              <div class="social-style1">
-                <a class="text-white me-2 fw500 fz17" href="#">Nous suivre</a>
-                <a href="#"><i class="fab fa-facebook-f list-inline-item"></i></a>
-                <a href="#"><i class="fab fa-twitter list-inline-item"></i></a>
-                <a href="#"><i class="fab fa-instagram list-inline-item"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in list-inline-item"></i></a>
-              </div>
+        </div>
+        <div class="col-md-5">
+          <div class="social-widget text-center text-md-end">
+            <div class="social-style1">
+              <a class="text-white me-2 fw500 fz17" href="#">Nous suivre</a>
+              <a href="#"><i class="fab fa-facebook-f list-inline-item"></i></a>
+              <a href="#"><i class="fab fa-twitter list-inline-item"></i></a>
+              <a href="#"><i class="fab fa-instagram list-inline-item"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in list-inline-item"></i></a>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-6 col-lg-3">
-            <div class="col-sm-6 col-lg-3">
-              <div class="link-style1 mb-4 mb-sm-5">
-                <h5 class="text-white mb15">Categories</h5>
-                <ul class="ps-0">
-                  <li><a href="page-service-v6.html">Infographie</a></li>
-                  <li><a href="page-service-v6.html">Développement web</a></li>
-                  <li><a href="page-service-v6.html">Médias sociaux</a></li>
-                  <li><a href="page-service-v6.html">Audio visuel</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-lg-3">
           <div class="col-sm-6 col-lg-3">
             <div class="link-style1 mb-4 mb-sm-5">
-              <h5 class="text-white mb15">Support</h5>
+              <h5 class="text-white mb15">Categories</h5>
               <ul class="ps-0">
-                <li><a href="#">Support et aide</a></li>
-                <li><a href="#">Confiance et sécurité</a></li>
+                <li><a href="page-service-v6.html">Infographie</a></li>
+                <li><a href="page-service-v6.html">Développement web</a></li>
+                <li><a href="page-service-v6.html">Médias sociaux</a></li>
+                <li><a href="page-service-v6.html">Audio visuel</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-3">
-            <div class="footer-widget">
-              <div class="footer-widget mb-4 mb-sm-5">
-                <div class="mailchimp-widget">
-                  <h5 class="title text-white mb20">Souscrire</h5>
-                  <div class="mailchimp-style1">
-                    <input type="email" class="form-control" placeholder="Adresse email">
-                    <button type="submit">Envoyer</button>
-                  </div>
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <div class="link-style1 mb-4 mb-sm-5">
+            <h5 class="text-white mb15">Support</h5>
+            <ul class="ps-0">
+              <li><a href="#">Support et aide</a></li>
+              <li><a href="#">Confiance et sécurité</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <div class="footer-widget">
+            <div class="footer-widget mb-4 mb-sm-5">
+              <div class="mailchimp-widget">
+                <h5 class="title text-white mb20">Souscrire</h5>
+                <div class="mailchimp-style1">
+                  <input type="email" class="form-control" placeholder="Adresse email">
+                  <button type="submit">Envoyer</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container white-bdrt1 py-4">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <div class="text-center text-lg-start">
-              <p class="copyright-text mb-2 mb-md-0 text-white-light ff-heading">© Copyright 2023, Propriété exclusive de Ogooué Labs. Produit par Ecole 241</p>
-            </div>
+    </div>
+    <div class="container white-bdrt1 py-4">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div class="text-center text-lg-start">
+            <p class="copyright-text mb-2 mb-md-0 text-white-light ff-heading">© Copyright 2023, Propriété exclusive de Ogooué Labs. Produit par Ecole 241</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
     <a class="scrollToHome" href="#"><i class="fas fa-angle-up"></i></a>
   </div>
 </div> -->
@@ -798,5 +842,5 @@
 <script src="js/script.js"></script>
 </body>
 
-<!-- Mirrored from creativelayers.net/themes/freeio-html/page-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Sep 2023 16:25:26 GMT -->
+<!-- Mirrored from creativelayers.net/themes/freeio-html/page-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Sep 2023 16:25:26 GMT -->
 </html>
